# AWS-test

./: buildspec.yml  pyproject.toml  setup.py
src/main/python/infrastructure/: codebuild.py  eg.py  pyproject.toml  s3.py  voyclib.json  voyclib.py
src/main/python/voyclib/: README.rst  dephell.toml  pyproject.toml  setup.py  test.py
src/main/python/voyclib/voyclib/: voyclib.py
src/main/python/voyclib/voyclib.egg-info/: PKG-INFO
voyclib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
