[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "voyc.ai infrastructure as code."
authors = ["voyc.ai"]

[tool.poetry.dependencies]
python = "^3.6"
awacs = "^1.0.1"
troposphere = "^2.6.3"
boto3 = "^1.16.0"
sshtunnel = "^0.1.5"
psycopg2 = "^2.8.6"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"