[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8"
voyclib = ">=1.0.4"
troposphere = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^3.8"

[[tool.poetry.source]]
name = "voyclib"
url = "http://voyclib.s3-website.eu-west-1.amazonaws.com/hello/"
secondary = true