[tool.poetry]
name = "voyclib"
version = "0.0.1"
description = "Voyc common library."
authors = ["admin@voyc.ai"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
troposphere = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^3.8"

[[tool.poetry.source]]
name = "voyclib"
url = "http://voyclib.s3-website.eu-west-1.amazonaws.com/hello/"
secondary = true